js/src/tests/test262/language/import/import-defer/errors/get-other-while-dep-evaluating-async/dep-1.1.1_FIXTURE.js
import
defer
*
as
ns
from
"
.
/
dep
-
1
-
tla_FIXTURE
.
js
"
;
export
let
foo
=
1
;
